[package]
name = "vst-gui"
version = "0.1.0"
authors = ["Alexander Agafonov <vanderlokken@gmail.com>"]
description = "An extension to the 'rust-vst' crate to create VST plugin GUIs"
license = "MIT"
keywords = ["gui", "plugin", "vst", "vst2"]

[dependencies]
vst = "^0.0"

[features]
modern = ["winrt"]

[target.'cfg(windows)'.dependencies]
memoffset = "0.2.1"
winrt = {version = "0.5.0", optional = true, features = [
    "windows-storage",
    "windows-web"
]}

[patch.crates-io]
winrt = {path = "C:/Users/User/Development/winrt-rust"}

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3.4"
features = [
    "combaseapi",
    "handleapi",
    "libloaderapi",
    "oaidl",
    "oleauto",
    "synchapi",
    "winbase",
    "winerror",
    "winuser"
]

[[example]]
name = "synth"
crate-type = ["cdylib"]
